--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
     command: publish
     publishWebProjects: false
     projects: '**/*.csproj'
-    arguments: '-c $(Build.Configuration) -o $(Build.ArtifactStagingDirectory) --no-restore'
+    arguments: '-c $(buildConfiguration) -o $(Build.ArtifactStagingDirectory) --no-restore'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish'
